--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Rock, Paper, Scissors</title>
   </head>
   <body>
+    <div id="buttons">
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissors">Scissors</button>
+    </div>
+    <p id="results"></p>
+    <div id="scores"></div>
     <script src="index.js"></script>
   </body>
 </html>
